k8s_study/module8/httpserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpserver
  name: httpserver
  namespace: gohttpserver
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 81
  selector:
    app: httpserver
